--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 # Profile information
 yourname: Aquil Hussain  ## put your name
-title: 'GRAPHIC &amp; WEB DESIGNER'  ## your title
-location: San Francisco , CA
+title: 'Btech Undergraduate(4th year)'  ## your title
+location: Sikkim, India
 
 
 ## Social Profiles
-facebook: http://www.facebook.com  ## your facebook account url
-twitter: http://www.twitter.com  ## your twitter account url
-linkedin: http://www.linkedin.com  ## your linkedin account url
+facebook: https://www.facebook.com/aquil.hussain.77  ## your facebook account url
+github: https://github.com/Aquilll
+linkedin: https://www.linkedin.com/in/aquil-hussain-191069109/  ## your linkedin account url
 dribbble: http://www.dribble.com  ## you dribbble account url
 foursquare: http://www.foursquare.com  ## your foursquare account url
 
