--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ location: Sikkim, India
 
 ## Social Profiles
 facebook: https://www.facebook.com/aquil.hussain.77  ## your facebook account url
+github: https://www.github.com/aquilll  ## your github account url
 twitter: http://www.twitter.com  ## your twitter account url
 ##github: https://github.com/Aquilll
 linkedin: https://www.linkedin.com/in/aquil-hussain-191069109/  ## your linkedin account url
